--- a/Progetto Programmazione Data Intensive.ipynb
+++ b/Progetto Programmazione Data Intensive.ipynb
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "2fa49b08",
    "metadata": {},
    "outputs": [],
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "bd63a4c6",
    "metadata": {},
    "outputs": [],
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "c4ce2baf",
    "metadata": {},
    "outputs": [
@@ -173,7 +173,7 @@
        "2           Mumbai  Economy      2.17          1   5956  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "45e69362",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
        "300152        Hyderabad  Business     10.08         49  81585  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e2a99203",
    "metadata": {},
    "outputs": [
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "7d149387",
    "metadata": {},
    "outputs": [
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "19a923fd",
    "metadata": {},
    "outputs": [
@@ -472,7 +472,7 @@
        "104513  Economy     13.33         15   5176  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "749e178f",
    "metadata": {},
    "outputs": [],
@@ -505,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "9bc7681d",
    "metadata": {},
    "outputs": [
@@ -524,7 +524,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +535,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "fe39753e",
    "metadata": {},
    "outputs": [
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "c43b046b",
    "metadata": {},
    "outputs": [
@@ -661,7 +661,7 @@
        "max        47.750000      49.000000  114705.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "5728b210",
    "metadata": {},
    "outputs": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "eac9edef",
    "metadata": {},
    "outputs": [
@@ -776,7 +776,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cad9c66f",
    "metadata": {},
    "outputs": [
@@ -1260,7 +1260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "436b23ad",
    "metadata": {
     "scrolled": false
@@ -1305,7 +1305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "dbff0a9d",
    "metadata": {},
    "outputs": [],
@@ -1328,7 +1328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "3f018870",
    "metadata": {},
    "outputs": [],
@@ -1349,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "57c7afa9",
    "metadata": {},
    "outputs": [],
@@ -1367,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "a9fb71b6",
    "metadata": {},
    "outputs": [],
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 21,
    "id": "a1a37da4",
    "metadata": {},
    "outputs": [],
@@ -1448,7 +1448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "bb3e5bf3",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "38e03cf0",
    "metadata": {},
    "outputs": [
@@ -1961,13 +1961,13 @@
      "output_type": "stream",
      "text": [
       "C:\\Users\\silvi\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py:372: FitFailedWarning: \n",
-      "5 fits failed out of a total of 150.\n",
+      "15 fits failed out of a total of 450.\n",
       "The score on these train-test partitions for these parameters will be set to nan.\n",
       "If these failures are not expected, you can try to debug them by setting error_score='raise'.\n",
       "\n",
       "Below are more details about the failures:\n",
       "--------------------------------------------------------------------------------\n",
-      "5 fits failed with the following error:\n",
+      "15 fits failed with the following error:\n",
       "Traceback (most recent call last):\n",
       "  File \"C:\\Users\\silvi\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_validation.py\", line 680, in _fit_and_score\n",
       "    estimator.fit(X_train, y_train, **fit_params)\n",
@@ -1980,11 +1980,21 @@
       "ValueError: max_depth must be greater than zero. \n",
       "\n",
       "  warnings.warn(some_fits_failed_message, FitFailedWarning)\n",
-      "C:\\Users\\silvi\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:969: UserWarning: One or more of the test scores are non-finite: [       nan 0.87972237 0.92398698 0.93454433 0.93855267 0.94189896\n",
+      "C:\\Users\\silvi\\anaconda3\\lib\\site-packages\\sklearn\\model_selection\\_search.py:969: UserWarning: One or more of the test scores are non-finite: [       nan 0.87972237 0.92398698 0.93454433 0.93855267 0.94194729\n",
+      " 0.9448607  0.94808731 0.95132279 0.95472905 0.95783462 0.96040068\n",
+      " 0.96252128 0.96429968 0.96582225 0.96718136 0.96795518 0.96877416\n",
+      " 0.96915611 0.96912837 0.96929633 0.96948042 0.96925086 0.96917365\n",
+      " 0.96933579 0.96913586 0.96900169 0.96897146 0.9689377  0.96902224\n",
+      "        nan 0.87972237 0.92398698 0.93454433 0.93855267 0.94189896\n",
       " 0.94484283 0.94804209 0.95122114 0.95466884 0.95769591 0.9599644\n",
       " 0.96202663 0.96375035 0.96523064 0.96630988 0.96731317 0.96828386\n",
       " 0.96804977 0.96792362 0.9678555  0.96804692 0.96837151 0.9677724\n",
-      " 0.9678697  0.96789948 0.96768342 0.96737001 0.96736007 0.96738544]\n",
+      " 0.9678697  0.96789948 0.96768342 0.96737001 0.96736007 0.96738544\n",
+      "        nan 0.87972237 0.92398698 0.93454433 0.93851018 0.94168978\n",
+      " 0.94443835 0.94732748 0.94982863 0.95284199 0.95571697 0.95850595\n",
+      " 0.96047694 0.96236724 0.96374365 0.96473774 0.96587837 0.96658161\n",
+      " 0.96648002 0.96605476 0.96600733 0.96583561 0.96602407 0.96582373\n",
+      " 0.96565656 0.96579793 0.96552168 0.96551204 0.96521388 0.9651253 ]\n",
       "  warnings.warn(\n"
      ]
     },
@@ -1993,16 +2003,16 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 1.8519e+06\n",
-      "       Relative error: 3.54279%\n",
-      "R-squared coefficient: 0.99642\n",
+      "   Mean squared error: 2.4861e+06\n",
+      "       Relative error: 4.26709%\n",
+      "R-squared coefficient: 0.99519\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 1.6084e+07\n",
-      "       Relative error: 12.18931%\n",
-      "R-squared coefficient: 0.96904\n",
+      "   Mean squared error: 1.5181e+07\n",
+      "       Relative error: 12.00597%\n",
+      "R-squared coefficient: 0.97078\n",
       "\n",
-      "Best iperparameters: {'regr__max_depth': 22}\n"
+      "Best iperparameters: {'preproc__poly__degree': 1, 'regr__max_depth': 21}\n"
      ]
     }
    ],
@@ -2013,19 +2023,20 @@
     "])\n",
     "\n",
     "grid = {\n",
-    "    \"regr__max_depth\": np.linspace(0, 30, 30).astype(int),\n",
+    "    \"preproc__poly__degree\": [1, 2, 3],\n",
+    "    \"regr__max_depth\": np.linspace(0, 30, 30).astype(int)\n",
     "}\n",
     "\n",
-    "gs = GridSearchCV(dtreereg, grid)\n",
-    "gs.fit(x_train, y_train)\n",
+    "dtreereg_gs = GridSearchCV(dtreereg, grid)\n",
+    "dtreereg_gs.fit(x_train, y_train)\n",
     "\n",
     "print(\"TRAINING SET:\")\n",
-    "print_eval(x_train, y_train, gs)\n",
+    "print_eval(x_train, y_train, dtreereg_gs)\n",
     "print(\"----------------------------------\")\n",
     "print(\"VALIDATION SET:\")\n",
-    "print_eval(x_val, y_val, gs)\n",
+    "print_eval(x_val, y_val, dtreereg_gs)\n",
     "\n",
-    "print(f\"\\nBest iperparameters: {gs.best_params_}\")"
+    "print(f\"\\nBest iperparameters: {dtreereg_gs.best_params_}\")"
    ]
   },
   {
@@ -2046,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 25,
    "id": "ada3cfe5",
    "metadata": {},
    "outputs": [
@@ -2088,7 +2099,93 @@
    "id": "9ee5035e",
    "metadata": {},
    "source": [
-    "Il risultato sembra essere uguale a quello utilizzando il Decision Tree."
+    "Il risultato sembra essere uguale a quello ottenuto utilizzando il Decision Tree."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "9deae296",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Random forest"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0a7329ae",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "### Predizione utilizzando il metodo migliore"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "431ed0bb",
+   "metadata": {},
+   "source": [
+    "Il modello scelto per la predizione è quello con Decision Tree, dato che si è rivelato il più accurato."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "11b42e5c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1638f380",
+   "metadata": {},
+   "source": [
+    "A questo punto utilizzaremo il modello per predire alcuni prezzi dei biglietti aerei.  \n",
+    "Confronteremo un volo che ci aspettiamo essere costoso, con uno che ci aspettiamo economico."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "453b9cd1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction 1: 98904.0\n",
+      "Prediction 2: 4001.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "flight_prediction_1 = pd.DataFrame({\n",
+    "    \"airline\": [\"Vistara\"],\n",
+    "    \"source_city\": [\"Kolkata\"],\n",
+    "    \"departure_time\": [\"Late_Night\"],\n",
+    "    \"stops\": [\"two_or_more\"],\n",
+    "    \"destination_city\": [\"Bangalore\"],\n",
+    "    \"class\": [\"Business\"],\n",
+    "    \"duration\": [10.00],\n",
+    "    \"days_left\": [2],\n",
+    "})\n",
+    "\n",
+    "flight_prediction_2 = pd.DataFrame({\n",
+    "    \"airline\": [\"AirAsia\"],\n",
+    "    \"source_city\": [\"Kolkata\"],\n",
+    "    \"departure_time\": [\"Evening\"],\n",
+    "    \"stops\": [\"zero\"],\n",
+    "    \"destination_city\": [\"Bangalore\"],\n",
+    "    \"class\": [\"Economy\"],\n",
+    "    \"duration\": [2],\n",
+    "    \"days_left\": [20],\n",
+    "})\n",
+    "\n",
+    "print(f\"Prediction 1: {dtreereg_gs.predict(flight_prediction_1)[0]}\")\n",
+    "print(f\"Prediction 2: {dtreereg_gs.predict(flight_prediction_2)[0]}\")"
    ]
   }
  ],
