--- a/Progetto Programmazione Data Intensive.ipynb
+++ b/Progetto Programmazione Data Intensive.ipynb
@@ -30,12 +30,14 @@
    "id": "b057a3d9",
    "metadata": {},
    "source": [
-    "## Caricamento delle librerie"
+    "---\n",
+    "## Importazione delle librerie\n",
+    "Per prima cosa importiamo alcune delle librerie che utilizzeremo per gestire ed analizzare il dataset."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "id": "2fa49b08",
    "metadata": {},
    "outputs": [],
@@ -59,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 36,
    "id": "bd63a4c6",
    "metadata": {},
    "outputs": [],
@@ -76,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 37,
    "id": "c4ce2baf",
    "metadata": {},
    "outputs": [
@@ -173,7 +175,7 @@
        "2           Mumbai  Economy      2.17          1   5956  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -184,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 38,
    "id": "45e69362",
    "metadata": {},
    "outputs": [
@@ -281,7 +283,7 @@
        "300152        Hyderabad  Business     10.08         49  81585  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 39,
    "id": "e2a99203",
    "metadata": {},
    "outputs": [
@@ -331,12 +333,12 @@
    "metadata": {},
    "source": [
     "Vediamo che non sono presenti valori nulli.  \n",
-    "Inoltre osserviamo che nel dataset sono presenti 300153 voli. Decidiamo quindi di ridurre le dimesioni del dataset."
+    "Inoltre osserviamo che nel dataset sono presenti 300153 voli. Decidiamo quindi di ridurre le dimesioni del dataset per velocizzare l'addestramento dei modelli."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 40,
    "id": "7d149387",
    "metadata": {},
    "outputs": [
@@ -397,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 41,
    "id": "19a923fd",
    "metadata": {},
    "outputs": [
@@ -472,7 +474,7 @@
        "104513  Economy     13.33         15   5176  "
       ]
      },
-     "execution_count": 7,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -492,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 42,
    "id": "749e178f",
    "metadata": {},
    "outputs": [],
@@ -505,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 43,
    "id": "9bc7681d",
    "metadata": {},
    "outputs": [
@@ -524,7 +526,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -535,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 44,
    "id": "fe39753e",
    "metadata": {},
    "outputs": [
@@ -566,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 45,
    "id": "c43b046b",
    "metadata": {},
    "outputs": [
@@ -661,7 +663,7 @@
        "max        47.750000      49.000000  114705.000000"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -671,13 +673,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b561f2e2",
+   "metadata": {},
+   "source": [
+    "Contiamo quanti valori diversi abbiamo per ciascun campo categorico."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 46,
    "id": "a92e62a7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "airline: 6\n",
+      "source_city: 6\n",
+      "departure_time: 6\n",
+      "stops: 3\n",
+      "destination_city: 6\n",
+      "class: 2\n"
+     ]
+    }
+   ],
    "source": [
-    "#conteggio records e num per ogni categoria?"
+    "for field in categorical_fields:\n",
+    "    print(f\"{field}: {len(dataset[field].unique())}\")"
    ]
   },
   {
@@ -698,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 47,
    "id": "5728b210",
    "metadata": {},
    "outputs": [
@@ -734,7 +758,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 48,
    "id": "eac9edef",
    "metadata": {},
    "outputs": [
@@ -771,12 +795,12 @@
    "id": "b7831387",
    "metadata": {},
    "source": [
-    "Confrontiamo il prezzo medio delle compagnie aeree."
+    "Confrontiamo il prezzo dei biglietti medio per ciascuna compagnia aerea."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "id": "cad9c66f",
    "metadata": {},
    "outputs": [
@@ -812,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 51,
    "id": "8b9a682a",
    "metadata": {},
    "outputs": [
@@ -852,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 52,
    "id": "f1e60c36",
    "metadata": {},
    "outputs": [
@@ -892,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 53,
    "id": "6c08a8de",
    "metadata": {},
    "outputs": [
@@ -929,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 54,
    "id": "1a6fca8e",
    "metadata": {},
    "outputs": [
@@ -965,7 +989,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 55,
    "id": "0672229b",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1039,7 @@
    "id": "f69e3298",
    "metadata": {},
    "source": [
-    "Possiamo notare che i voli in economy sono distribuiti in una fascia di prezzo più bassa rispetto a quelli in business, tuttavia sono stati acquistati molti più biglietti della classe economy rispetto alla business."
+    "Possiamo notare che i voli in economy sono distribuiti in una fascia di prezzo più bassa rispetto a quelli in business, inoltre sono stati acquistati molti più biglietti della classe economy rispetto alla business."
    ]
   },
   {
@@ -1028,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 56,
    "id": "436b23ad",
    "metadata": {
     "scrolled": false
@@ -1059,7 +1083,7 @@
    "id": "7fe1faad",
    "metadata": {},
    "source": [
-    "Possiamo vedere che i prezzi dei bliglietti acquistati pochi giorni prima sono molto più alti di quelli acquistati più di 20 giorni prima."
+    "Possiamo vedere che i prezzi dei bliglietti acquistati pochi giorni prima della partenza sono molto più alti di quelli acquistati più di 20 giorni prima."
    ]
   },
   {
@@ -1073,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 57,
    "id": "dbff0a9d",
    "metadata": {},
    "outputs": [],
@@ -1096,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 58,
    "id": "3f018870",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1128,7 @@
     "x = dataset.drop(columns=\"price\")\n",
     "y = dataset[\"price\"]\n",
     "\n",
-    "x_train, x_val, y_train, y_val = train_test_split(x, y, test_size=0.3, random_state = 11)"
+    "x_train, x_val, y_train, y_val = train_test_split(x, y, test_size=0.4, random_state = 11)"
    ]
   },
   {
@@ -1117,7 +1141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 59,
    "id": "57c7afa9",
    "metadata": {},
    "outputs": [],
@@ -1135,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 60,
    "id": "a9fb71b6",
    "metadata": {},
    "outputs": [],
@@ -1168,25 +1192,19 @@
    "id": "1249c991",
    "metadata": {},
    "source": [
-    "Procederemo testando diversi tipi di modello, cercando quello che avrà un'accuratezza maggiore nel trovare i prezzi dei voli.  \n",
+    "Procederemo testando diversi tipi di modello, cercando quello che avrà un'accuratezza maggiore nel predire i prezzi dei voli.  \n",
     "In particolare utilizzeremo:  \n",
     "- Regressione lineare\n",
     "- Regressione ridge\n",
     "- Regressione lasso\n",
     "- Regressione elastic net\n",
     "- Decision Tree Regression\n",
-    "- XGBoost Regressor\n",
-    "  \n",
-    "    \n",
-    "+ **KernelRidge Regression**\n",
-    "+ **Regression Trees**\n",
-    "+ **Random Forest Regressor**\n",
-    "\n"
+    "- XGBoost Regressor"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 61,
    "id": "a1a37da4",
    "metadata": {},
    "outputs": [],
@@ -1217,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 83,
    "id": "1b4def3e",
    "metadata": {},
    "outputs": [
@@ -1226,14 +1244,14 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 4.5854e+07\n",
-      "       Relative error: 46.44373%\n",
-      "R-squared coefficient: 0.91136\n",
+      "   Mean squared error: 4.5686e+07\n",
+      "       Relative error: 46.35300%\n",
+      "R-squared coefficient: 0.91144\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 4.6569e+07\n",
-      "       Relative error: 46.95581%\n",
-      "R-squared coefficient: 0.91035\n",
+      "   Mean squared error: 4.6649e+07\n",
+      "       Relative error: 46.86878%\n",
+      "R-squared coefficient: 0.91047\n",
       "\n",
       "Best iperparameters: {'preproc__numeric': 'passthrough'}\n"
      ]
@@ -1276,7 +1294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "id": "bb3e5bf3",
    "metadata": {},
    "outputs": [
@@ -1285,14 +1303,14 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 4.3878e+07\n",
-      "       Relative error: 45.13194%\n",
-      "R-squared coefficient: 0.91518\n",
+      "   Mean squared error: 4.3725e+07\n",
+      "       Relative error: 44.99298%\n",
+      "R-squared coefficient: 0.91524\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 4.445e+07\n",
-      "       Relative error: 45.69757%\n",
-      "R-squared coefficient: 0.91443\n",
+      "   Mean squared error: 4.4551e+07\n",
+      "       Relative error: 45.50010%\n",
+      "R-squared coefficient: 0.9145\n",
       "\n",
       "Best iperparameters: {'preproc__numeric': 'passthrough', 'preproc__poly__degree': 3}\n"
      ]
@@ -1345,7 +1363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "id": "38e03cf0",
    "metadata": {},
    "outputs": [
@@ -1354,14 +1372,14 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 4.3878e+07\n",
-      "       Relative error: 45.13099%\n",
-      "R-squared coefficient: 0.91518\n",
+      "   Mean squared error: 4.3725e+07\n",
+      "       Relative error: 44.99185%\n",
+      "R-squared coefficient: 0.91524\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 4.445e+07\n",
-      "       Relative error: 45.69657%\n",
-      "R-squared coefficient: 0.91443\n",
+      "   Mean squared error: 4.4551e+07\n",
+      "       Relative error: 45.49880%\n",
+      "R-squared coefficient: 0.9145\n",
       "\n",
       "Best iperparameters: {'preproc__numeric': StandardScaler(), 'preproc__poly__degree': 3, 'regr__alpha': 1}\n"
      ]
@@ -1415,7 +1433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "id": "c3fce0fb",
    "metadata": {},
    "outputs": [
@@ -1424,16 +1442,16 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 4.5855e+07\n",
-      "       Relative error: 46.38721%\n",
-      "R-squared coefficient: 0.91135\n",
+      "   Mean squared error: 4.5686e+07\n",
+      "       Relative error: 46.34914%\n",
+      "R-squared coefficient: 0.91144\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 4.6568e+07\n",
-      "       Relative error: 46.89404%\n",
-      "R-squared coefficient: 0.91035\n",
+      "   Mean squared error: 4.6649e+07\n",
+      "       Relative error: 46.86450%\n",
+      "R-squared coefficient: 0.91047\n",
       "\n",
-      "Best iperparameters: {'preproc__numeric': StandardScaler(), 'regr__alpha': 1}\n"
+      "Best iperparameters: {'preproc__numeric': 'passthrough', 'regr__alpha': 0.1}\n"
      ]
     }
    ],
@@ -1475,7 +1493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "id": "9026b48e",
    "metadata": {},
    "outputs": [
@@ -1484,14 +1502,14 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 4.7107e+07\n",
-      "       Relative error: 45.12379%\n",
-      "R-squared coefficient: 0.90893\n",
+      "   Mean squared error: 4.6941e+07\n",
+      "       Relative error: 44.99848%\n",
+      "R-squared coefficient: 0.909\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 4.7802e+07\n",
-      "       Relative error: 45.50351%\n",
-      "R-squared coefficient: 0.90798\n",
+      "   Mean squared error: 4.7942e+07\n",
+      "       Relative error: 45.35493%\n",
+      "R-squared coefficient: 0.90799\n",
       "\n",
       "Best iperparameters: {'preproc__numeric': StandardScaler(), 'regr__alpha': 0.1, 'regr__l1_ratio': 0.8}\n"
      ]
@@ -1536,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 67,
    "id": "3caa9c42",
    "metadata": {},
    "outputs": [
@@ -1545,16 +1563,16 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 2.4861e+06\n",
-      "       Relative error: 4.26709%\n",
-      "R-squared coefficient: 0.99519\n",
+      "   Mean squared error: 3.3503e+06\n",
+      "       Relative error: 5.16941%\n",
+      "R-squared coefficient: 0.99351\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 1.5181e+07\n",
-      "       Relative error: 12.00597%\n",
-      "R-squared coefficient: 0.97078\n",
+      "   Mean squared error: 1.6506e+07\n",
+      "       Relative error: 12.48879%\n",
+      "R-squared coefficient: 0.96832\n",
       "\n",
-      "Best iperparameters: {'preproc__numeric': StandardScaler(), 'preproc__poly__degree': 1, 'regr__max_depth': 21}\n"
+      "Best iperparameters: {'preproc__numeric': StandardScaler(), 'preproc__poly__degree': 1, 'regr__max_depth': 20}\n"
      ]
     }
    ],
@@ -1606,7 +1624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 73,
    "id": "ada3cfe5",
    "metadata": {},
    "outputs": [
@@ -1615,14 +1633,14 @@
      "output_type": "stream",
      "text": [
       "TRAINING SET:\n",
-      "   Mean squared error: 8.8239e+06\n",
-      "       Relative error: 13.24613%\n",
-      "R-squared coefficient: 0.98294\n",
+      "   Mean squared error: 7.8377e+06\n",
+      "       Relative error: 12.94795%\n",
+      "R-squared coefficient: 0.98481\n",
       "----------------------------------\n",
       "VALIDATION SET:\n",
-      "   Mean squared error: 1.2895e+07\n",
-      "       Relative error: 15.04463%\n",
-      "R-squared coefficient: 0.97518\n"
+      "   Mean squared error: 1.3507e+07\n",
+      "       Relative error: 15.60232%\n",
+      "R-squared coefficient: 0.97408\n"
      ]
     }
    ],
@@ -1635,7 +1653,7 @@
     "\n",
     "xgboost_reg = Pipeline([\n",
     "    (\"preproc\", preprocessor),\n",
-    "    (\"regr\", XGBRegressor(objective='reg:squarederror', reg_alpha=0.0, reg_lambda=1.0, n_estimators=200))\n",
+    "    (\"regr\", XGBRegressor(objective='reg:squarederror', reg_alpha=0.0, reg_lambda=1.0, n_estimators=250))\n",
     "])\n",
     "\n",
     "xgboost_reg.fit(x_train, y_train)\n",
@@ -1652,7 +1670,7 @@
    "id": "9ee5035e",
    "metadata": {},
    "source": [
-    "Il risultato è peggiore di quello ottenuto utilizzando il Decision Tree, ma il tempo di addestramento è stato decisamente minore."
+    "Il risultato è peggiore di quello ottenuto utilizzando il Decision Tree."
    ]
   },
   {
@@ -1677,13 +1695,13 @@
    "id": "1638f380",
    "metadata": {},
    "source": [
-    "A questo punto utilizzaremo il modello per predire alcuni prezzi dei biglietti aerei.  \n",
+    "A questo punto utilizzaremo il modello per predire alcuni prezzi di biglietti aerei.  \n",
     "Confronteremo un volo che ci aspettiamo essere costoso, con uno che ci aspettiamo economico."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 72,
    "id": "453b9cd1",
    "metadata": {},
    "outputs": [
@@ -1691,8 +1709,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Prediction 1: 98904.0\n",
-      "Prediction 2: 4001.0\n"
+      "Prediction 1: 75023.0\n",
+      "Prediction 2: 3862.0\n"
      ]
     }
    ],
@@ -1704,7 +1722,7 @@
     "    \"stops\": [\"one\"],\n",
     "    \"destination_city\": [\"Bangalore\"],\n",
     "    \"class\": [\"Business\"],\n",
-    "    \"duration\": [10.00],\n",
+    "    \"duration\": [13.00],\n",
     "    \"days_left\": [2],\n",
     "})\n",
     "\n",
@@ -1715,7 +1733,7 @@
     "    \"stops\": [\"zero\"],\n",
     "    \"destination_city\": [\"Bangalore\"],\n",
     "    \"class\": [\"Economy\"],\n",
-    "    \"duration\": [2],\n",
+    "    \"duration\": [13.00],\n",
     "    \"days_left\": [20],\n",
     "})\n",
     "\n",
